--- a/src/assets/styles/transition.scss
+++ b/src/assets/styles/transition.scss
@@ -36,11 +36,11 @@
 .breadcrumb-enter,
 .breadcrumb-leave-active {
   opacity: 0;
-  transform: translateX(20px);
+  transform: translateX(60px);
 }
 
 .breadcrumb-move {
-  transition: all .5s;
+  transition: all 1.5s;
 }
 
 .breadcrumb-leave-active {
