完成左侧菜单的暗色主题和亮色主题切换

--- a/src/assets/styles/element-variables.scss
+++ b/src/assets/styles/element-variables.scss
@@ -8,7 +8,7 @@ $--color-primary: #1890ff;
 $--color-success: #13ce66;
 $--color-warning: #ffba00;
 $--color-danger: #ff4949;
-// $--color-info: #1E1E1E;
+$--color-info: #1E1E1E;
 
 $--button-font-weight: 400; 
 
