完成.el-dropdown-link 颜色的问题

--- a/src/assets/styles/element-ui.scss
+++ b/src/assets/styles/element-ui.scss
@@ -82,3 +82,7 @@
 .el-range-separator {
   box-sizing: content-box;
 }
+
+.el-dropdown .el-dropdown-link{
+  color: var(--el-color-primary) !important;
+}
