--- a/src/assets/styles/sidebar.scss
+++ b/src/assets/styles/sidebar.scss
@@ -1,4 +1,4 @@
-#app {
+// #app {
 
   .main-container {
     min-height: 100%;
@@ -191,7 +191,12 @@
       transition: none;
     }
   }
-}
+// }
+
+
+
+
+
 
 // when menu collapsed
 .el-menu--vertical {
