缓存组件需要提供名字，每一个页面加不是很好

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,5 +1,5 @@
 @import "./variables.module.scss";
-@import "element-ui/packages/theme-chalk/src/index";
+// @import "element-ui/packages/theme-chalk/src/index";
 @import "./mixin.scss";
 @import "./transition.scss";
 @import "./element-ui.scss";
