--- a/src/assets/styles/sidebar.scss
+++ b/src/assets/styles/sidebar.scss
@@ -66,7 +66,7 @@
       width: 100% !important;
     }
 
-    .el-menu-item, .el-sub-menu__title {
+    .el-menu-item, .el-submenu__title {
       overflow: hidden !important;
       text-overflow: ellipsis !important;
       white-space: nowrap !important;
@@ -74,18 +74,18 @@
 
     // menu hover
     .sub-menu-title-noDropdown,
-    .el-sub-menu__title {
+    .el-submenu__title {
       &:hover {
         background-color: rgba(0, 0, 0, 0.06) !important;
       }
     }
 
-    & .theme-dark .is-active > .el-sub-menu__title {
+    & .theme-dark .is-active > .el-submenu__title {
       color: $base-menu-color-active !important;
     }
 
-    & .nest-menu .el-sub-menu>.el-sub-menu__title,
-    & .el-sub-menu .el-menu-item {
+    & .nest-menu .el-submenu>.el-submenu__title,
+    & .el-submenu .el-menu-item {
       min-width: $base-sidebar-width !important;
 
       &:hover {
@@ -93,8 +93,8 @@
       }
     }
 
-    & .theme-dark .nest-menu .el-sub-menu>.el-sub-menu__title,
-    & .theme-dark .el-sub-menu .el-menu-item {
+    & .theme-dark .nest-menu .el-submenu>.el-submenu__title,
+    & .theme-dark .el-submenu .el-menu-item {
       background-color: $base-sub-menu-background !important;
 
       &:hover {
@@ -125,10 +125,10 @@
       }
     }
 
-    .el-sub-menu {
+    .el-submenu {
       overflow: hidden;
 
-      &>.el-sub-menu__title {
+      &>.el-submenu__title {
         padding: 0 !important;
 
         .svg-icon {
@@ -139,8 +139,8 @@
     }
 
     .el-menu--collapse {
-      .el-sub-menu {
-        &>.el-sub-menu__title {
+      .el-submenu {
+        &>.el-submenu__title {
           &>span {
             height: 0;
             width: 0;
@@ -160,7 +160,7 @@
     }
   }
 
-  .el-menu--collapse .el-menu .el-sub-menu {
+  .el-menu--collapse .el-menu .el-submenu {
     min-width: $base-sidebar-width !important;
   }
 
@@ -206,7 +206,7 @@
     }
   }
 
-  .nest-menu .el-sub-menu>.el-sub-menu__title,
+  .nest-menu .el-submenu>.el-submenu__title,
   .el-menu-item {
     &:hover {
       // you can use $sub-menuHover
