--- a/src/assets/styles/variables.module.scss
+++ b/src/assets/styles/variables.module.scss
@@ -21,7 +21,7 @@ $base-logo-light-title-color: #001529;
 $base-sub-menu-background: #1f2d3d;
 $base-sub-menu-hover: #001528;
 
-$--color-primary: #ff40df;
+$--color-primary: #409EFF;
 $--color-success: #67C23A;
 $--color-warning: #E6A23C;
 $--color-danger: #F56C6C;
